[gd_scene load_steps=4 format=2]

[ext_resource path="res://Recursos/Tiles/tile_0129.png" type="Texture" id=1]
[ext_resource path="res://Escenas/Player/Cetro.gd" type="Script" id=2]
[ext_resource path="res://Escenas/Player/ProyectilPlayer.tscn" type="PackedScene" id=3]

[node name="Cetro" type="Node2D"]
script = ExtResource( 2 )
proyectil = ExtResource( 3 )

[node name="TimerEnfriamiento" type="Timer" parent="."]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="PosicionDisparo" type="Position2D" parent="."]

[connection signal="timeout" from="TimerEnfriamiento" to="." method="_on_TimerEnfriamiento_timeout"]
